Dark Mode & Mobile Fix

--- a/assets/main.css
+++ b/assets/main.css
@@ -6,29 +6,81 @@
     box-sizing: border-box;
 } 
 
-:root {  
-    --color-1: #202020;  
-    --color-2: #f9f9f9;  
-    --color-3: #cdcdcd;
-    --button: #66ff00b5;
-}  
-
 html, body {
     font-family: 'Ubuntu', sans-serif !important;
     margin: 0;
     padding: 0;
     text-size-adjust: 1;
     letter-spacing: .4px;
+    overflow-y: hidden !important;
 }
 
 body {
-    background-color: var(--color-2);
-    color: var(--color-1);
+    background-color: var(--background-primary) !important;
+    color: var(--text-primary) !important;
     min-height: 100vh;
     display: flex;
     flex-direction: column;
     line-height: 1.5 !important;
-    transition: .5 ease-in-out;
+    transition: .5 ease-in-out !important;
+}
+
+/*dark mode*/
+.light-theme {
+	--background-primary: #EEEEEE;
+	--background-secondary: #CCD4FF;
+	--text-primary: #000000;
+	--text-secondary: #626262;
+}
+
+.dark-theme {
+	--background-primary: #111111;
+	--background-secondary: #262e57;
+	--text-primary: #ffffff;
+	--text-secondary: #8f8f8f;
+}
+
+.mini-container {
+    
+    flex-direction: row;
+    display: flex;
+    justify-content: right;
+    align-items: right;
+    float: right;
+}
+
+button.theme {
+    margin-top: 1.5rem;
+    margin-right: 1.5rem;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	padding: 4px;
+	border-radius: 50%;
+	width: 32px;
+	height: 32px;
+	transition: ease-out 0.5s;
+	cursor: pointer;
+    border: none;
+	padding: 0;
+	background: none;
+}
+
+button.theme:hover {
+	background: var(--background-secondary) !important;
+}
+
+button.theme svg {
+	stroke: var(--text-primary) !important;
+	width: 24px;
+	height: 24px;
+	border-radius: 50%;
+}
+/*end dark mode*/
+
+html::-webkit-scrollbar {
+    display: none;
+    -ms-overflow-style: none;
 }
 
 main {
@@ -52,12 +104,12 @@ main {
 
 .card {
     max-width: 700px !important;
-    position: relative;
     background: whitesmoke !important;
 }
 
 .card.glass {
     backdrop-filter: blur(12px) !important;
+    margin: auto 1rem;
 }
 
 .card-footer-item:not(:last-child) {
@@ -77,7 +129,7 @@ main {
     /*paragraph*/
     font-weight: 400;
     font-style: italic;
-    font-size: clamp(16px, 3vw, 22px);
+    font-size: clamp(15px, 3vw, 21px);
     color: #535353;
     margin-top: .75rem;
 }
@@ -88,7 +140,7 @@ main {
 }
 
 h1 span.typer {
-    color: var(--button) !important;
+    color: #202020 !important;
 }
 
 .card-content h1 {
@@ -97,7 +149,7 @@ h1 span.typer {
 }
 
 p.card-header-title {
-    color: var(--color-3);
+    color: var(--text-secondary);
     margin-left: .75rem !important;
 }
 
@@ -119,8 +171,8 @@ a.card-footer-item:hover span.nav-text {
     visibility: visible;
     width: max-content;
     height: 24px;
-    background-color: var(--color-1); /*#f9f9f954*/
-    color: var(--color-2);
+    background-color: var(--text-primary); /*#f9f9f954*/
+    color: var(--background-primary);
 }
 /* end mouse hover*/
 
@@ -134,68 +186,6 @@ a.card-footer-item:hover {
 }
 /****/
 
-/*dark mode*/
-.mini-container {
-    float: right;
-    margin: 1rem;
-}
-
-.switch {  
-    position: relative;  
-    display: inline-block;  
-    width: 3.5rem;  
-    height: 1.8rem; 
-}  
-
-.switch__input {  
-    opacity: 0;  
-    width: 0;  
-    height: 0;  
-} 
-
-.switch__slider {  
-    position: absolute;  
-    top: 0;  
-    left: 0;  
-    right: 0;  
-    bottom: 0;  
-    background: var(--button);  
-    border-radius: 1rem;  
-    transition: background 0.2s;  
-    cursor: pointer;  
-}  
-
-.switch__slider::before {  
-    content: "";  
-    position: absolute;  
-    left: 0.2rem;  
-    top: 50%;  
-    transform: translateY(-50%);  
-    height: 1.4rem;  
-    width: 1.4rem;  
-    border-radius: 1.4rem;  
-    background: var(--color-2);  
-    transition: transform 0.2s, width 0.2s, background 0.2s;  
-}   
-
-.switch__input:checked + .switch__slider {  
-    background-color: var(--color-3);  
-}  
-
-.switch__input:not(:checked):active + .switch__slider::before {  
-    width: 2.4rem;  
-}  
-
-.switch__input:checked:active + .switch__slider::before {  
-    transform: translate(1rem, -50%); 
-    width: 2.4rem;  
-}  
-
-.switch__input:checked + .switch__slider::before {  
-    transform: translate(1.8rem, -50%); 
-}
-/*end dark mode*/
-
 footer {
     bottom: 0;
     grid-area: footer;
@@ -207,6 +197,12 @@ footer #copyright {
 
 .card-footer-item {
     padding: 1.1em !important;
+}
+
+footer small span {
+    margin: .5rem !important;
+    letter-spacing: .6px;
+    font-stretch: expanded;
 }
 
 footer span i {
